# swift-browser-ui

./: .coveragerc  .dockerignore  .env.test  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pyspelling.yml  .travis.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile-Allas  Dockerfile-Devel  Dockerfile-SD  LICENSE  Makefile  Procfile  Procfile-test  README-request.md  README-runner.md  README-sharing.md  README.md  app_sharing.sh  cypress.json  docker-compose-dev.yml  generate-data.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_runner.py  sftp_ui.py  swift_data_10_cont_15_objs.json  swiftrequest.db.sql  tatus  tox-upload.ini  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general-issue-template.md  user_story.md
.github/config/: .env.test  .finnishwords.txt  .spellcheck.yml  .wordlist.txt  Procfile  init-project-db.sh  vault_policy.hcl
.github/workflows/: chrome.yml  codeql-analysis.yml  codeql.yml  container.yml  dependency-auto-merge.yml  dependency-review.yml  docs.yml  e2etests.yml  eslint.yml  firefox.yml  install.yml  pnpm-autoupdate.yml  pnpm-dependabot.yml  pre-commit.yml  publish.yml  security.yml  spellcheck.yml  style.yml  unit-tests.yml  unit.yml  vueunit.yml
.gitlab/issue_templates/: Bug Report.md  Feature Request.md  General Issue.md
.s2i/: environment
Testdata/: retjson.py
bindings/js/: swift_sharing_request_bind.js  swift_x_account_sharing_bind.js  swift_x_account_sharing_bind_obj.js
bindings/python/: publish.py  swift_x_account_sharing_bind.py
deploy/: app-request.sh  app-runner.sh  app-sharing.sh  app.sh
devproxy/: Dockerfile-chrome  Dockerfile-dns  Dockerfile-emsdk-deps  Dockerfile-ff  Dockerfile-nginx  Dockerfile-ui  Dockerfile-vault  README.md  build_wasm.sh  dev_dnsmasq.conf  nginx.conf
doc/source/: conf.py  index.rst  usage.rst
dockerfiles/: Dockerfile-SD  Dockerfile-build-crypt  Dockerfile-build-crypt-devel  Dockerfile-ci  Dockerfile-request  Dockerfile-runner  Dockerfile-sharing  Dockerfile-ui  Dockerfile-ui-devel
docs/: API_spec.yml  Makefile
docs/_static/: api.yml  openapi.yaml  sharing_api.yml
docs/charts/: API_flow.dia  WebSSO_login.dia
docs/source/: code.rst  conf.py  deploy.rst  index.rst  instructions.rst  request.rst  runner.rst  sharing.rst  tech.rst  testing.rst  tools.rst  ui.rst  usage.rst
performance_tests/: locustfile.py
s3browser/: __init__.py  _convenience.py  api.py  exceptions.py  front.py  login.py  server.py  settings.py  shell.py  static
s3browser_backend/: __init__.py  _convenience.py  login.py  server.py
s3browser_frontend/: browse.html  index.html  login.html
s3browser_frontend/css/: browse.css
s3browser_frontend/js/: api.js  browse.js  browse.old.js  btablecomp.js  containers.js  dash.js  index.js  lang.js  login.js
scripts/: eslint.sh  gen_ca.sh  pyspelling.sh  sort.sh  vault-docker.sh  vault.sh
src/s3browser_backend/: api.py  front.py  login.py  retjson.py  server.py
src/s3browser_frontend/: login.html
src/site/: api.py  api_server.py  front.py  login.py  route.py  server.py
swift_browser_ui/: __init__.py  _convenience.py  api.py  discover.py  exceptions.py  front.py  health.py  launcher.py  login.py  middlewares.py  misc_handlers.py  server.py  settings.py  shell.py  signature.py  static
swift_browser_ui/common/: __init__.py  common_db.py  common_handlers.py  common_middleware.py  common_util.py  db.py  signature.py  types.py  vault_client.py
swift_browser_ui/request/: __init__.py  api.py  auth.py  db.py  middleware.py  server.py
swift_browser_ui/sharing/: __init__.py  api.py  auth.py  db.py  middleware.py  preflight.py  server.py  shared.py
swift_browser_ui/ui/: __init__.py  _convenience.py  api.py  discover.py  front.py  health.py  login.py  middlewares.py  misc_handlers.py  replicate.py  server.py  settings.py  shell.py  signature.py  static
swift_browser_ui/upload/: __init__.py  api.py  auth.py  common.py  cryptupload.py  download.py  replicate.py  server.py  upload.py
swift_browser_ui_frontend/: .eslintrc.json  .gitignore  401.html  403.html  404.html  README.md  babel.config.js  browse.html  build_wasm.sh  currents.config.js  cypress.config.js  cypress.json  eslint.config.js  eslint.config.mjs  index.html  jest.config.js  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js  vue.config.js
swift_browser_ui_frontend.old/: 401.html  browse.html
swift_browser_ui_frontend.old/css/: login.css
swift_browser_ui_frontend.old/js/: dash.js
swift_browser_ui_frontend/config/: README.md  allas_overrides.js  config.js  lang_overrides.js  sd_overrides.js
swift_browser_ui_frontend/css/: browse.css
swift_browser_ui_frontend/js/: btablecomp.js  containers.js  index.js  lang.js  objects.js
swift_browser_ui_frontend/public/: aggregatorsw.js  index.html
swift_browser_ui_frontend/src/: 400.html  401.html  403.html  404.html  503.html  Browser.vue  Index.vue  Login.vue  accessibility.html  (+9 more)
swift_browser_ui_frontend_npm/: README.md  package-lock.json  package.json  vue.config.js
swift_sharing_request/: __init__.py  api.py  auth.py  db.py  middleware.py  preflight.py  server.py
swift_upload_runner/: __init__.py  api.py  auth.py  common.py  download.py  middleware.py  replicate.py  server.py  upload.py
swift_x_account_sharing/: __init__.py  api.py  auth.py  cors.py  db.py  dict_db.py  middleware.py  server.py
tests/: coveralls.py  creation.py  mock_server.py  mockups.py  requirements.txt  test_api.py  test_auth.py  test_bindings_bind.py  test_convenience.py  test_db.py  test_dict_db.py  test_front.py  test_login.py  test_middleware.py  test_middlewares.py  test_preflight.py  test_server.py  test_shell.py  up-test-data.py
ui_tests/: __init__.py  common.py  common_with_unittests.py  test_frontend_chrome.py  test_frontend_firefox.py  test_session.py  test_session_chrome.py  test_session_firefox.py  ui_take_screenshots.py
wasmcrypt/: go.mod  go.sum
(+314 files in other folders)
