[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swift-browser-ui"
dynamic = ["version"]
description = "Object browser Web UI for Openstack Swift API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "CSC Developers" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "aiohttp-session==2.12.0",
    "aiohttp==3.9.1",
    "redis==5.0.1",
    "asyncpg==0.29.0",
    "certifi==2023.11.17",
    "click==8.1.7",
    "cryptography==41.0.7",
    "gunicorn==21.2.0",
    "keystoneauth1==5.4.0",
    "oidcrp==2.1.4",
    "python-swiftclient==4.4.0",
    "uvloop==0.19.0",
    "msgpack==1.0.7",
]

[project.optional-dependencies]
docs = [
    "sphinx==6.2.1",
    "sphinx_rtd_theme==2.0.0",
]
test = [
    "black==23.12.0",
    "coverage==7.3.3",
    "flake8-docstrings==1.7.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.5.0",
    "pytest==7.4.4",
    "tox==4.11.4",
]
ui_test = [
    "pytest-timeout==2.2.0",
    "pytest==7.4.4",
]
dev = [
    "honcho==1.1.0",
    "pre-commit==3.6.0",
    "pyspelling==2.9",
    "ruff==0.1.8",
    "types-certifi",
    "types-redis",
    "types-requests",
]

[project.scripts]
swift-browser-ui = "swift_browser_ui.launcher:run_ui"
swift-sharing-request = "swift_browser_ui.launcher:run_request"
swift-upload-runner = "swift_browser_ui.launcher:run_upload"
swift-x-account-sharing = "swift_browser_ui.launcher:run_sharing"

[project.urls]
Source = "https://github.com/CSCfi/swift-browser-ui"
Documentation = "https://swift-browser-ui.readthedocs.io"

[tool.hatch.version]
path = "swift_browser_ui/__init__.py"

[tool.black]
line-length = 90
target-version = ['py310']

[tool.isort]
atomic = true
profile = "black"
line_length = 90
py_version=310

[tool.ruff]
line-length = 90
target-version = "py310"

# https://beta.ruff.rs/docs/rules/
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    # "ANN",   # flake8-annotations
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "D",   # pydocstyle
#    "UP",  # pyupgrade
    "S",   # Bandit
]

ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "E501",    # line too long, handled by black
    "B904",    # do not perform function calls in argument defaults
    "PLR2004", # magic value used in comparison
    "S113",    # Probable use of requests call without timeout
    "D203",    # one-blank-line-before-class
    "D213",    # multi-line-summary-second-line
]

[tool.ruff.mccabe]
max-complexity = 15
